assets/kubevirt/ocp/operator.yml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-cnv
