assets/kubevirt/ocp/pxbbq-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pxbbq
  namespace: pxbbq
  labels:
    app: pxbbq-web
    px-dr: 'false'
spec:
  to:
    kind: Service
    name: pxbbq-svc
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
