assets/kubevirt/ocp/pxbbq.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app.kubernetes.io/name: mongo
    app.kubernetes.io/component: backend
  namespace: pxbbq
spec:
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
  selector:
    vm.kubevirt.io/name: ubuntu-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pxbbq-web
  namespace: pxbbq
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pxbbq-web
  template:
    metadata:
      labels:
        app: pxbbq-web
    spec:
      containers:
      - name: pxbbq-web
        image: eshanks16/pxbbq:v3.2
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pxbbq-svc
  namespace: pxbbq
  labels:
    app: pxbbq-web
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: pxbbq-web
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pxbbq
  namespace: pxbbq
  labels:
    app: pxbbq-web
spec:
  to:
    kind: Service
    name: pxbbq-svc
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
